# mirua

./: .gitignore  Cargo.toml  README.md  start
.github/workflows/: release.yml  test.yml
src/: config.rs  jre.rs  main.rs  mirua.toml.template  self_update.rs  utils.rs
src/pom/: mod.rs  structure.rs
