[package]
name = "mirua"
version = "0.1.3"
authors = ["zkonge <zkonge@outlook.com>"]
edition = "2018"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[dependencies]
log = "^0.4"
simple_logger = "^1.9"
toml = "^0.5"
glob = "^0.3"
pbr = "^1.0"
threadpool = "^1.8"
minreq = { version = "^2.2", features = [ "https-native", "json-using-serde" ] }
serde = { version = "^1.0", features = [ "derive" ] }
quick-xml = { version = "^0.18", features = [ "serialize" ] }


[target.'cfg(windows)'.dependencies]
zip = "^0.5"

[target.'cfg(unix)'.dependencies]
tar = "^0.4"
flate2 = "^1.0"
